Replacing the logic to set and retrieve cards fee. Added Unit tests. Added a controller to update cards fee.
